syntax = "proto3";

package crocodile.srv.actuator;

service Actuator {
	// 创建新的执行器
	rpc CreateActuator(Actuat) returns(Response){}
	// 删除执行器
	rpc DeleteActuator(Actuat) returns(Response){}
	// 修改执行器
	rpc ChangeActuator(Actuat) returns(Response){}
	// 获取执行器
	rpc GetActuator(Actuat) returns(Response){}
	// 获取全部已经创建的
	rpc GetAllExecutorIP(Actuat) returns(Response){}
}


message Actuat {
	int32 id = 1;
	string name = 2;
	repeated Addr address = 3;
	string createdby = 4;
}
message Response {
	repeated Actuat actuators = 2;
	// 所有注册的worker的IP
	repeated string executorIps = 3;
	//
	int32 code = 4;
}

message Addr {
	// IP地址
	string ip = 1;
	// 状态
	bool online = 2;
}