syntax = "proto3";

package crocodile.srv.auth;

service Auth {
	rpc CreateUser(User)returns(Response){}
	rpc ChangeUser(User)returns(Response){}
	rpc DeleteUser(User)returns(Response){}
	rpc GetUser(User)returns(Response){}
	rpc LoginUser(User)returns(Response){}
	rpc LogoutUser(User)returns(Response){}
}

message User {
	uint32 id = 1;
	string username = 2;
	string password = 3;
	string email = 4;
	string avatar = 5;
	bool forbid = 6;
	bool super = 7;
}

message Response {
	string token = 1;
	repeated User users = 2;
	int32 code = 3;
}